# ComplexNumbers

./: CMakeLists.txt  main.cpp
TestTask/libs/Complex/: CMakeLists.txt  CMakeLists.txt.JkiqMQ
TestTask/libs/Complex/include/: Complex.h
TestTask/libs/Complex/test/: Complex_test.cpp
